<resources>
    <string name="app_name">Navigate</string>
    <string name="title_activity_maps">Navigate</string>
    <string name="title_activity_main2">Navigate</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="alert">Alert</string>
    <string name="title_activity_main3">MainActivity3</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_location_permission">Allow Location</string>
    <string name="text_location_permission">Enable app to use device Location</string>
    <string name="ok">OK</string>
    <string name="search">Search</string>
    <string name="todo">TODO</string>
    <string name="home">Home</string>
    <string name="home_address">set address</string>
    <string name="work">Work</string>
    <string name="enter_address">Enter address</string>
    <string name="start">start</string>
    <string name="networkConnection">check network connection</string>
    <string name="navigate">navigate</string>
    <string name="recenter">recenter</string>
    <string name="overview">overview</string>
    <string name="schedule_name">schedule name</string>
    <string name="details">Details</string>
    <string name="feelslike">FeelsLike</string>
    <string name="pressure">Pressure</string>
    <string name="visibility">visibility</string>
    <string name="uv_index">UV Index</string>
    <string name="cloud">Cloud</string>
    <string name="humidity">Humidity</string>
    <string name="precipitation">PRECIPITATION</string>
    <string name="probability">Probability</string>
    <string name="rain">Rain</string>
    <string name="snow_depth">Snow Depth</string>
    <string name="wind">WIND</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="wind_direction">Wind Direction</string>
    <string name="wind_gust">Wind Gust</string>
    <string name="snow">Snow</string>
    <string name="winds_from">Winds From</string>
    <string name="rain_chance">Rain Chance</string>
    <string name="sunrise">sunrise</string>
    <string name="sunset">sunset</string>
    <string name="humudity_capital">HUMUDITY</string>
    <string name="pressure_capital">PRESSURE</string>
    <string name="uv_index_capital">UV INDEX</string>
    <string name="feels_like_capital">FEELS LIKE</string>
    <string name="visibility_capital">VISIBILITY</string>
    <string name="wind_capital">WIND</string>
    <string name="categories">Categories</string>
    <string name="schedule">Schedule</string>
    <string name="favourite">Favourite</string>
    <string name="search_here">Search here</string>
    <string name="choose_from_map">choose from map</string>
    <string name="police">Police</string>
    <string name="hospital">Hospital</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="fire_station">Fire Station</string>
    <string name="gas_station">Gas Station</string>
    <string name="car_repair">Car Repair</string>
    <string name="restaurant">Restaurant</string>
    <string name="coffee">Coffee</string>
    <string name="bars">Bars</string>
    <string name="cafeteria">Cafeteria</string>
    <string name="teashop">Teashop</string>
    <string name="movies">Movies</string>
    <string name="nightlife">Nightlife</string>
    <string name="park">Park</string>
    <string name="libraries">Libraries</string>
    <string name="museums">Museums</string>
    <string name="supermarket">Supermarket</string>
    <string name="atms">ATMs</string>
    <string name="car_wash">Car Wash</string>
    <string name="parking">Parking</string>
    <string name="laundry">Laundry</string>
    <string name="electric_vehicle_charging">Electric Vehicle Charging</string>
    <string name="emergency">Emergency</string>
    <string name="eateries">Eateries</string>
    <string name="entertainment">Entertainment</string>
    <string name="services">Services</string>
    <string name="schedule_small">schedule</string>
    <string name="enter_address_name">please enter address location</string>
    <string name="date_picker">date_picker</string>
    <string name="time_picker">time_picker</string>
    <string name="choose_valid_date">please choose a valid date</string>
    <string name="schedule_title_empty">schedule title is empty</string>
    <string name="map">Map</string>
    <string name="set_time">Set Time</string>
    <string name="save">SAVE</string>
    <string name="only_update">can only be updated</string>
    <string name="places">Places</string>
    <string name="set_address_name">please set address name</string>
    <string name="title_name_empty">title name cannot be empty</string>
    <string name="place_name">Place name</string>
    <string name="need_to_allow_location">you need to allow location to use this app</string>
    <string name="check_network">check network connection</string>
    <string name="current">Current</string>
    <string name="hourly">Hourly</string>
    <string name="daily">Daily</string>
    <string name="cloud_coverage">Cloud Coverage</string>
    <string name="ws">WS</string>
    <string name="h">H</string>
    <string name="r">R</string>
    <string name="t">T</string>
    <string name="no_route_found">No route Found</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="please_wait">Please wait…</string>
    <string name="hours">hours</string>
    <string name="hour">hour</string>
    <string name="minutes">minutes</string>
    <string name="minute">minute</string>
    <string name="days">days</string>
    <string name="day">day</string>
    <string name="no_results_found">No Results Found</string>
    <string name="website">website</string>
    <string name="view_locations_on_map">view locations on map</string>
    <string name="choose">Choose</string>
    <string name="no">no</string>
    <string name="location_around">around your current location</string>
    <string name="offline">offline</string>
    <string name="swipe">Swipe a list to the right to delete</string>
    <string name="loading">Loading</string>
</resources>