<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f3f3f3"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:elevation="200dp"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:background="@color/tab_light"
        android:id="@+id/linear_top"
        >
    <TextView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textStyle="italic"
        android:gravity="center"
        android:textSize="22sp"
        android:visibility="gone"
        android:textColor="@color/white"
        android:id="@+id/title_textview"
        />

        <EditText
            android:hint="@string/place_name"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="3dp"
            android:layout_marginEnd="24dp"
            android:background="#FFF"
            android:id="@+id/title_edit"
            android:textSize="22sp"
            android:gravity="center"
            android:textStyle="italic"
            android:layout_gravity="center"
            android:autofillHints=""
            android:inputType="text" />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linear_top"
        android:id="@+id/my_layout">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/white"
        android:background="@drawable/rectangle_2"
        android:layout_marginTop="20dp"
        android:id="@+id/horizontal"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/enter_address"
            android:background="@color/white"
            android:layout_centerVertical="true"
            android:layout_marginStart="13dp"
            android:textStyle="italic"
            android:id="@+id/entering_address"
            android:textSize="17sp"/>
        <View
            android:layout_width="1dp"
            android:layout_height="25dp"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@+id/finger"
            android:background="@color/black"
            android:layout_centerVertical="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map"
            android:id="@+id/finger"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:textSize="20sp"
            app:drawableLeftCompat="@drawable/hand"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="45dp"
        android:id="@+id/title"
        android:layout_centerVertical="true"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_below="@+id/horizontal"
        android:layout_height="254dp">

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/adding_favourites_adview"
            ads:adSize="MEDIUM_RECTANGLE"
            ads:adUnitId="ca-app-pub-2650278620916037/1082353084"
            />


    </RelativeLayout>
        <TextView
            android:elevation="200dp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:text="@string/save"
            android:textColor="@color/white"
            android:gravity="center"
            android:typeface="sans"
            android:textSize="20sp"
            android:id="@+id/saving_favourite"
            android:background="@color/tab_light"
            android:textStyle="bold"/>

    </RelativeLayout>
</RelativeLayout>