<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/measure_layout"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fafafa">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="30dp">
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:id="@+id/image_categories1"
        android:layout_marginStart="20dp"
        android:src="@drawable/emergency"
       />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emergency"
        android:id="@+id/text_categories1"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/tab_light"
        android:layout_marginStart="10dp"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recycler_inside1"
        android:layout_below="@+id/image_categories"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        />

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="30dp">
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:id="@+id/image_categories2"
        android:layout_marginStart="20dp"
        android:src="@drawable/restaurant"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eateries"
        android:id="@+id/text_categories2"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/tab_light"
        android:layout_marginStart="10dp"/>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recycler_inside2"
        android:layout_below="@+id/image_categories"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"/>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="30dp">
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:id="@+id/image_categories3"
        android:layout_marginStart="20dp"
        android:src="@drawable/entertainment"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entertainment"
        android:id="@+id/text_categories3"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/tab_light"
        android:layout_marginStart="10dp"/>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recycler_inside3"
        android:layout_below="@+id/image_categories"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"/>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="30dp">
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:id="@+id/image_categories4"
        android:layout_marginStart="20dp"
        android:src="@drawable/service"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/services"
        android:id="@+id/text_categories4"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/tab_light"
        android:layout_marginStart="10dp"/>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recycler_inside4"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"/>
   </LinearLayout>
</ScrollView>
</LinearLayout>