<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_marginTop="10dp"
    android:layout_gravity="center_horizontal"
    android:id="@+id/weather_relative_next"
    android:orientation="horizontal"
    android:background="@drawable/rectangle_2"
    android:backgroundTint="@color/white"
    android:elevation="20dp"
    android:weightSum="14"
    >

    <TextView
        android:layout_weight="5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:gravity="center"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:id="@+id/city_name_next"
        />
    <LinearLayout
        android:layout_weight="2"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2"
        android:id="@+id/linear_next_1">

        <TextView
            android:id="@+id/temp_next"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/t"
            android:textColor="#000"
            android:textSize="18sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="@color/quantum_grey"
        android:layout_gravity="center"
        android:id="@+id/temp_result_next"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_weight="2"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2"
        android:id="@+id/linear_layout_next_2">
        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/r"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textColor="#000"
            android:id="@+id/pressure_next"
            />
        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center"
            android:textColor="@color/quantum_grey"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:id="@+id/rain_result_next"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_weight="3"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2"
        android:id="@+id/linear_layout_next_3">
        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/ws"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="#000"
            android:id="@+id/wind_speed_next"
            />
        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/quantum_grey"
            android:textSize="18sp"
            android:id="@+id/wind_speed_result_next"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_weight="2"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2"
        android:id="@+id/linear_layout_next_4">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/h"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="#000"
            android:id="@+id/humidity_speed_next"
            />
        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textColor="@color/quantum_grey"
            android:id="@+id/humidity_result_next"
            />
    </LinearLayout>
</LinearLayout>